# qna

./: .gitignore  README.md
frontend/: .gitignore  app.vue  cypress.config.js  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
rest-api/: .flake8  .gitignore  .pylintrc  Dockerfile  clear_mongo_db.py  pyproject.toml  requirements.txt
rest-api/scripts/: run-docker-image.sh
rest-api/src/: auth_middlewares.py  flask_app.py  limiter.py  logging_setup.py  main.py  mongo_database.py
rest-api/src/controllers/: __init__.py  auth.py  auth_controller.py  current_account.py  forms.py  responses.py  surveys.py
rest-api/src/controllers/current_account/: __init__.py  forms.py  surveys.py
rest-api/src/controllers/surveys/: __init__.py  stats.py
rest-api/src/dto/: account_dto.py
rest-api/src/errors/: survey_not_found_error.py
rest-api/src/models/: account_credentials_schema.py  account_dto.py  auth_providers.py  form.py  question.py  question_schema.py  survey.py  survey_response.py  survey_schema.py  survey_stats.py
rest-api/src/services/: accounts.py  auth.py  forms.py  survey_stats.py  surveys.py
rest-api/src/services/surveys/: __init__.py  responses.py  stats.py
rest-api/src/tests/: test_auth.py
rest-api/src/utils/: convert_bson_to_json_dict.py  create_validation_error_response.py  find_item.py  get_account_from_headers.py  get_first_dict_key.py  google_oauth.py
rest-api/src/utils/auth/: google_oauth.py  tokens.py
rest-api/src/utils/decorators/: api_response.py
rest-api/src/validation_schemas/: account_credentials_schema.py
(+101 files in other folders)
