[tool.poetry]
name = "qna-rest-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
waitress = "^3.0.2"
pymongo = "^4.10.1"
flask-limiter = "^3.10.1"
flask-cors = "^5.0.0"
flask = "^3.1.0"
marshmallow = "^3.26.0"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
